# backend/src/main/java/com/bk/bkconnect/controller/PostController.java
@@ -4,8 +4,10 @@ import com.bk.bkconnect.common.rest.GenericResponse;
 import com.bk.bkconnect.domain.request.AddPostRq;
 import com.bk.bkconnect.domain.request.GetPostFilter;
 import com.bk.bkconnect.domain.request.GetTutorFilter;
+import com.bk.bkconnect.domain.response.GetEnrollTutorRs;
 import com.bk.bkconnect.domain.response.GetPostRs;
 import com.bk.bkconnect.domain.response.PageableRs;
+import com.bk.bkconnect.domain.response.RecommendationRs;
 import com.bk.bkconnect.service.IPostService;
 import lombok.AllArgsConstructor;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -37,6 +39,29 @@ public class PostController {
     @PostMapping("/add")
     public GenericResponse<GetPostRs> addPost(@RequestBody AddPostRq rq) {
         var rs = postService.addPost(rq);
+        return GenericResponse.parse(rs);
+    }
+
+    @PreAuthorize("hasRole('STUDENT')")
+    @GetMapping("/{postId}/getRecommend")
+    public GenericResponse<PageableRs<RecommendationRs>> getRecommend(
+            @PathVariable String postId, @RequestParam int pageNumber, @RequestParam int pageSize) {
+        var rs = postService.getRecommend(UUID.fromString(postId), pageNumber, pageSize);
+        return GenericResponse.parse(rs);
+    }
+
+    @PreAuthorize("hasRole('TUTOR')")
+    @PostMapping("/{postId}/enroll")
+    public GenericResponse<Boolean> enroll(@PathVariable String postId) {
+        var rs = postService.enroll(UUID.fromString(postId));
+        return GenericResponse.parse(rs);
+    }
+
+    @PreAuthorize("hasRole('STUDENT')")
+    @GetMapping("/{postId}/getEnrollTutor")
+    public GenericResponse<PageableRs<GetEnrollTutorRs>> getEnrollTutor(
+            @PathVariable String postId, @RequestParam int pageNumber, @RequestParam int pageSize) {
+        var rs = postService.getEnrollTutor(UUID.fromString(postId), pageNumber, pageSize);
         return GenericResponse.parse(rs);
     }
 
